--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs"]
 	path = docs
-	url = git://github.com/python-diamond/Diamond.wiki.git
+	url = https://github.com/python-diamond/Diamond.git
